RSWW-87 transport-service: tests: get items from lists not pairs
Signed-off-by: Paweł Cichowski <pcichowski@pcichowski.com>