@@ -127,7 +127,7 @@ public class TransportsQueryServiceGetTransportsBetweenLocationTest {
 
         // Assert
         assertEquals(responseDto.getTransportPairs().size(), 1);
-        assertEquals(responseDto.getTransportPairs().getFirst().getFirst().getIdTransport(), idA);
-        assertEquals(responseDto.getTransportPairs().getFirst().getSecond().getIdTransport(), idB);
+        assertEquals(responseDto.getTransportPairs().getFirst().get(0).getIdTransport(), idA);
+        assertEquals(responseDto.getTransportPairs().getFirst().get(1).getIdTransport(), idB);
     }
 }
